deploy/02-deploy/03-dashboard/050-Service.yaml
kind: Service
apiVersion: v1
metadata:
 labels:
   app: grafana
 name: grafana
spec:
 ports:
 - name: web
   port: 3000
   protocol: TCP
   targetPort: 3000
 selector:
   app: grafana
